Fix box spacing on event show and create pages.

--- a/app/assets/stylesheets/api/events.scss
+++ b/app/assets/stylesheets/api/events.scss
@@ -41,15 +41,13 @@
   &-form {
     width: 100%;
     max-width: 900px;
-    padding: 10px;
+    padding: 20px;
     &-container {
       width: 100%;
-      margin-top: 60px;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      padding: 20px;
     }
     &-section {
       &-container {
@@ -161,11 +159,8 @@
       &-container {
         background: white;
         width: 100%;
-        height: 300px;
-        margin-left: -50px;
-        margin-bottom: -100px;
+        height: 250px;
         display: flex;
-        padding-bottom: 20px;
         flex-direction: column;
         justify-content: center;
         align-items: center;
@@ -234,7 +229,7 @@
     }
     &-container {
       transition: all .5s ease-in;
-      margin: 60px auto 0 auto;
+      margin: 0px auto;
       width: 100%;
       max-width: 1080px;
       display: flex;
@@ -248,7 +243,7 @@
     }
     @media only screen and (min-width: 1080px) {
       &-container {
-        margin: 100px auto;
+        margin: 60px auto;
       }
     }
     &-hero {
