--- a/app/assets/stylesheets/api/users.scss
+++ b/app/assets/stylesheets/api/users.scss
@@ -16,7 +16,7 @@
       &-container {
         width: 100vw;
         background: red;
-        padding: 10px;
+        padding: 20px;
         background: $off-white;
         display: flex;
         flex-direction: column-reverse;
@@ -135,7 +135,6 @@
       }
     }
     &-container {
-      margin: 60px 0;
       width: 100vw;
       background: white;
     }
